{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 23,
  "lineage": "79cbe2df-adcc-3621-a50b-fa2b533bafb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078c1149d8ad719a7",
            "arn": "arn:aws:ec2:ap-southeast-1:533267407355:instance/i-0b1d3b0475a8dd7af",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1d3b0475a8dd7af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ajx-monitoring-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040887cc5588bf518",
            "private_dns": "ip-10-20-12-25.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.12.25",
            "public_ip": "13.214.30.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0452d271712c6d0df",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d5dbce88bd080ac",
            "tags": {
              "CreatedBy": "AJX-ENV-DEVTOOL",
              "Name": "ajx-monitoring-server"
            },
            "tags_all": {
              "CreatedBy": "AJX-ENV-DEVTOOL",
              "Name": "ajx-monitoring-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097684b73c6a6dbfc"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.monitoring_sg",
            "data.aws_secretsmanager_secret.aws_credentials",
            "data.aws_secretsmanager_secret.github_token",
            "data.aws_secretsmanager_secret_version.aws_current",
            "data.aws_secretsmanager_secret_version.github_current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "monitoring_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267407355:internet-gateway/igw-09412c3fe2b732945",
            "id": "igw-09412c3fe2b732945",
            "owner_id": "533267407355",
            "tags": {
              "Name": "ajx-monitoring-igw"
            },
            "tags_all": {
              "Name": "ajx-monitoring-igw"
            },
            "vpc_id": "vpc-0c18c395b2b7ceedb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "monitoring_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267407355:route-table/rtb-01b2d11db6ec6ff95",
            "id": "rtb-01b2d11db6ec6ff95",
            "owner_id": "533267407355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09412c3fe2b732945",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ajx-monitoring-rt"
            },
            "tags_all": {
              "Name": "ajx-monitoring-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c18c395b2b7ceedb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.monitoring_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "monitoring_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0115d86a3a0b01370",
            "route_table_id": "rtb-01b2d11db6ec6ff95",
            "subnet_id": "subnet-00d5dbce88bd080ac"
          },
          "dependencies": [
            "aws_internet_gateway.monitoring_igw",
            "aws_route_table.monitoring_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267407355:security-group/sg-097684b73c6a6dbfc",
            "description": "Security group for AJX monitoring stack",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097684b73c6a6dbfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "139.162.51.246/32",
                  "0.0.0.0/0"
                ],
                "description": "AlertManager",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              },
              {
                "cidr_blocks": [
                  "139.162.51.246/32",
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "139.162.51.246/32",
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "139.162.51.246/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ajx-monitoring-sg",
            "name_prefix": "",
            "owner_id": "533267407355",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "AJX-ENV-DEVTOOL",
              "Name": "ajx-monitoring-sg"
            },
            "tags_all": {
              "CreatedBy": "AJX-ENV-DEVTOOL",
              "Name": "ajx-monitoring-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c18c395b2b7ceedb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}